...
        android:layout_height="@dimen/section_spacer_height"/>

    <!-- Wrapping brightness level settings components in a layout so that 
         I can define a single onClick to the entire set
      -->
    <RelativeLayout
            android:id="@+id/brightnessPctsSection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <TextView
            android:id="@+id/brightnessPctsLabel"
            style="@style/BodyFont"
            android:layout_width="wrap_content"
...
            android:layout_below="@id/brightnessPctsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brightness_pcts_label_desc"/>

        <TextView
            android:id="@+id/brightnessPctsOutput"
            style="@style/ValueFont"
            android:layout_below="@id/brightnessPctsLabelDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

...
