<?xml version="1.0" encoding="utf-8"?>
<!--
-->

<resources xmlns:tools="http://schemas.android.com/tools">
    <!-- DO NOT set app_name, as it will be generated by gradle -->
    <string name="app_name_debug" tools:ignore="UnusedResources">Brightness Tile (Dev)</string>
    <string name="app_name_release" tools:ignore="UnusedResources">Brightness Tile</string>
    <string name="service_label">Brightness Tile Update Service</string>
    <string name="boot_receiver_label">Brightness Tile Start at Boot Receiver</string>

    <string name="tile_label">Brightness</string>
    <string name="brightness_auto_label">auto</string>
    <string name="app_brightness_level_label">Current brightness level is:</string>
    <string name="brightness_pcts_label">Brightness Levels</string>
    <string name="brightness_pcts_label_desc" formatted="false">Brightness Levels (in %) through which the tile would rotate, comma-separated. Use 999 for auto. \nNote: Levels below 10% <i><b>might not work</b></i> on some devices. On some devices, the screens would be too dark. Some others would ignore them, and set to some minimum brightness.</string>
    <string name="ok_btn_label">OK</string>
    <string name="cancel_btn_label">CANCEL</string>

    <string name="err_msgf_invalid_settings">Brightness Levels Settings must be comma-separated, with each level between 1 and 100 (or 999 for auto). Invalid one in question: %s</string>

    <string name="sys_permission_required_msg">Changing brightness requires permission to modify system settings.\n\nPlease allow the permission.</string>
</resources>
